--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,119 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.fathers-day-banner {
+  padding: 1rem 1rem;
+  color: black;
+  text-align: center;
+  background-color: lightblue;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.top-text h4 {
+  margin: 0;
+  font-size: 1rem;
+  letter-spacing: 2px;
 }
+
+.top-text h1 {
+  font-size: 2rem;
+  font-weight: 800;
+  margin: 0.3rem 0;
+}
+
+.top-text p {
+  font-size: 0.9rem;
+  margin-top: 0.3rem;
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 0.5rem;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  height: 170px;
+}
+
+
+.card-box {
+  border-radius: 12px;
+  width: 100%;
+  max-width: 230px;
+  flex: 1;
+  height: 150px;
+  padding: 0.5rem;
+  color: black;
+  text-align: center;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.card-box img {
+  height: 100px;
+  width: 100%;
+  max-width: 250px;
+  object-fit: contain;
+  margin-bottom: 0.5rem;
+}
+
+.card-title {
+  padding: 4px;
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 1.1rem;
+}
+@media (max-width: 480px) {
+  .card-container {
+    flex-wrap: nowrap;
+    height: 140px;
+  }
+
+  .card-box {
+    max-width: 32%;
+    height: 130px;
+    padding: 0.3rem;
+  }
+
+  .card-box img {
+    height: 70px;
+    width: 80px;
+  }
+
+  .card-title {
+    font-size: 0.65rem;
+  }
+}
+.category-slider-wrapper {
+  background-color: lightblue;
+  padding: 10px;
+  border-bottom: 1px solid whitesmoke;
+  border-top: 1px solid whitesmoke;
+ 
+}
+
+
+html,
+body {
+  /* overflow-y: hidden; */
+  overflow-x: hidden;
+}
+
+@media (max-width: 576px) {
+  .position-absolute h4 {
+    font-size: 1.4rem !important;
+  }
+
+  .position-absolute p {
+    font-size: 0.85rem;
+  }
+
+  .position-absolute button {
+    font-size: 0.85rem;
+    padding: 6px 12px;
+  }
+
+  .position-absolute {
+    top: 10px !important;
+    left: 10px !important;
+    padding: 10px 12px !important;
+    max-width: 95% !important;
+  }
+}
+
+
