--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,6 @@
   height: 170px;
 }
 
-
 .card-box {
   border-radius: 12px;
   width: 100%;
@@ -84,13 +83,10 @@
   padding: 10px;
   border-bottom: 1px solid whitesmoke;
   border-top: 1px solid whitesmoke;
- 
 }
-
 
 html,
 body {
-  /* overflow-y: hidden; */
   overflow-x: hidden;
 }
 
@@ -116,4 +112,41 @@ body {
   }
 }
 
+body,
+html,
+#root {
+  margin: 0;
+  padding: 0;
+}
 
+.category-slider-wrapper {
+  margin-top: 0 !important;
+  padding-top: 0 !important;
+}
+
+.slick-slider {
+  margin-top: 0 !important;
+  padding-top: 0 !important;
+}
+
+.px-2 {
+  padding-top: 0 !important;
+  margin-top: 0 !important;
+}
+
+.mt-3 {
+  margin-top: 0 !important;
+}
+
+.event-card {
+  height: 160px;
+  overflow: hidden;
+}
+
+.bg-chill {
+  background: linear-gradient(to top right, #fcdcdc, #87ceeb);
+}
+
+.bg-skin {
+  background: linear-gradient(to top, #a0469e, #f06ebe);
+}
