--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   padding: 1rem 1rem;
   color: black;
   text-align: center;
-  background-color: lightblue;
+  background-color: lightgreen;
 }
 
 .top-text h4 {
@@ -149,4 +149,10 @@ html,
 
 .bg-skin {
   background: linear-gradient(to top, #a0469e, #f06ebe);
+}
+
+/* styles.css or your component CSS file */
+.no-underline {
+  text-decoration: none !important;
+  color: inherit;
 }
